--- a/app/Directory.Packages.props
+++ b/app/Directory.Packages.props
@@ -43,5 +43,11 @@
     <PackageVersion Include="System.Linq.Async" Version="6.0.1" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.4" />
     <PackageVersion Include="xunit" Version="2.6.2" />
+    <PackageVersion Include="Syncfusion.XlsIO.Net.Core" Version="21.1.38" />
+    <PackageVersion Include="Syncfusion.XlsIORenderer.Net.Core" Version="21.1.38" />
+    <PackageVersion Include="Syncfusion.DocIO.Net.Core" Version="21.1.38" />
+    <PackageVersion Include="Syncfusion.DocIORenderer.Net.Core" Version="21.1.38" />
+    <PackageVersion Include="Syncfusion.EJ2.PdfViewer.AspNet.Core" Version="21.1.38" />
+    <PackageVersion Include="Syncfusion.PresentationRenderer.Net.Core" Version="21.1.38" />
   </ItemGroup>
 </Project>
